force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <label>Review</label>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Review #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>