force-app/main/default/objects/Review__c/fields/Job_application__c.field-meta.xml
<CustomField>
    <fullName>Job_application__c</fullName>
    <label>Job application</label>
    <referenceTo>Job_application__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>