force-app/main/default/objects/Review__c/fields/Raiting__c.field-meta.xml
<CustomField>
    <fullName>Raiting__c</fullName>
    <label>Raiting</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>