force-app/main/default/objects/Review__c/validationRules/Max_raiting.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_raiting</fullName>
    <active>true</active>
    <description>Maximum rating</description>
    <errorConditionFormula>Raiting__c &gt;100</errorConditionFormula>
    <errorDisplayField>Raiting__c</errorDisplayField>
    <errorMessage>Maximum rating 100</errorMessage>
</ValidationRule>